Added mechanism to open modules to instrumentation plugins